--- a/www/css/main.css
+++ b/www/css/main.css
@@ -40,6 +40,15 @@ section {
   border-radius: 25%;
 }
 
+.technology-section ul {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+}
+.technology-section ul li {
+  width: 40em;
+}
+
 .testimonial-section {
   background-color: rgba(170, 126, 108, 0.2470588235);
   text-align: center;
@@ -57,13 +66,20 @@ section {
   background-color: rgba(190, 139, 119, 0.431372549);
   border-radius: 1em;
 }
-.testimonial-section ul img {
+.testimonial-section ul li img {
   width: 64px;
   height: 64px;
   border-radius: 50%;
   border: 5px solid;
   border-color: #b37b66;
   margin-top: -2.3em;
+}
+.testimonial-section ul li blockquote {
+  font-style: italic;
+}
+.testimonial-section ul li cite {
+  font-weight: bold;
+  font-style: normal;
 }
 
 .socialnetwork-section {
