mobile-first style

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -7,72 +7,86 @@ body {
   margin: 0;
   background-color: #E6E1DF;
   background-image: url(/images/curly-line.svg);
-  background-size: 100vh;
+  background-size: 963px;
   background-position: center;
   background-repeat: repeat;
   background-attachment: fixed;
   font-family: "Poppins";
   color: var(--main-color);
+  word-wrap: break-word;
+  font-size: 12px;
 }
 
 section {
-  padding: 5em 2em 2em 5em;
+  padding-top: 5em;
 }
 
 .presentation-section .container {
   text-align: center;
-  font-size: 0.9rem;
   font-weight: 200;
 }
 .presentation-section .container h1 {
   font-weight: 500;
+  font-size: 4em;
 }
 .presentation-section .container hr {
   width: 2rem;
 }
 .presentation-section .container h2 {
   font-weight: 200;
-  font-size: 1em;
   text-transform: uppercase;
+  font-size: 0.8em;
 }
 .presentation-section .container .portrait img {
-  width: 20em;
+  width: 50vw;
   border-radius: 25%;
+  max-width: 500px;
 }
 
+.technology-section {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
 .technology-section ul {
   list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
 }
 .technology-section ul li {
-  width: 40em;
+  min-width: 40em;
+}
+.technology-section ul li i {
+  color: #44b916;
+  display: inline;
 }
 
 .testimonial-section {
   background-color: rgba(170, 126, 108, 0.2470588235);
-  text-align: center;
 }
 .testimonial-section ul {
+  text-align: center;
   margin: 0;
-  padding: 0;
-  display: inline-flex;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 .testimonial-section ul li {
   list-style-type: none;
-  text-align: center;
-  width: 30em;
-  margin: 2em 1em 3em auto;
+  width: 40vw;
+  min-width: 50em;
+  margin-top: 3em;
+  margin-right: auto;
+  margin-left: auto;
   background-color: rgba(190, 139, 119, 0.431372549);
   border-radius: 1em;
+  margin-bottom: 5em;
 }
 .testimonial-section ul li img {
   width: 64px;
-  height: 64px;
   border-radius: 50%;
   border: 5px solid;
   border-color: #b37b66;
-  margin-top: -2.3em;
+  margin-top: -3em;
 }
 .testimonial-section ul li blockquote {
   font-style: italic;
@@ -99,5 +113,5 @@ section {
 }
 .socialnetwork-section ul li i {
   color: #E6E1DF;
-  font-size: 48px;
+  font-size: 3em;
 }/*# sourceMappingURL=main.css.map */
